# PhotoManager

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: AppFrame.cpp  AppFrame.h  Application.cpp  Application.h  Branch.h  CommandBase.h  CommandCompressWebp.cpp  CommandCompressWebp.h  CommandInputDateStamp.cpp  CommandInputDateStamp.h  Date.h  DirectoryFetcher.h  ExecutePowershellURI.h  ExecytePowershellURI.h  ExplorerTree.cpp  ExplorerTree.h  Init.h  MenuBar.h  OstreamOverloads.cpp  OstreamOverloads.h  PhotoPreviewer.cpp  PhotoPreviewer.h  Selector.cpp  Selector.h  Status.h  StatusManager.cpp  StatusManager.h  WidgetIds.h  define.h  main.cpp
